Added route to fetch storage by id
